--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,42 +1,34 @@
 version: 2.1
 
-references:
-  images:
-    go: &GOLANG_IMAGE circleci/golang:latest
-  environments:
-    tmp: &TEST_RESULTS_PATH /tmp/test-results # path to where test results are saved
+orbs:
+  go: circleci/go@1.1.1
+  win: circleci/windows@2.2.0
 
-# reusable 'executor' object for jobs
-executors:
-  go:
-    docker:
-      - image: *GOLANG_IMAGE
-    environment:
-      - TEST_RESULTS: *TEST_RESULTS_PATH
+references:
+  environments:
+    tmp: &TEST_RESULTS_PATH /tmp/test-results
+
+environment: &ENVIRONMENT
+  TEST_RESULTS: "/tmp/test-results"
 
 jobs:
-  go-fmt-and-test:
-    executor: go
+  linux-tests:
+    executor:
+      name: go/default
+      tag: << parameters.go-version >>
+    parameters:
+      go-version:
+        type: string
+    environment:
+      TEST_RESULTS: *TEST_RESULTS_PATH
     steps:
       - checkout
-      - run: mkdir -p $TEST_RESULTS
-
-      # Restore go module cache if there is one
-      - restore_cache:
-          keys:
-            - go-getter-modcache-v1-{{ checksum "go.mod" }}
-
-      - run: go mod download
-
-      # Save go module cache if the go.mod file has changed
-      - save_cache:
-          key: go-getter-modcache-v1-{{ checksum "go.mod" }}
-          paths:
-            - "/go/pkg/mod"
-
-      # check go fmt output because it does not report non-zero when there are fmt changes
-      - run:
-          name: check go fmt
+      - run: mkdir -p $TEST_RESULTS/go-getter
+      - go/load-cache
+      - go/mod-download
+      - go/save-cache
+      - run: 
+          name: Run go format
           command: |
             files=$(go fmt ./...)
             if [ -n "$files" ]; then
@@ -44,18 +36,61 @@ jobs:
               echo "$files"
               exit 1
             fi
-
-      # run go tests with gotestsum
-      - run: |
-          PACKAGE_NAMES=$(go list ./...)
-          gotestsum --format=short-verbose --junitfile $TEST_RESULTS/gotestsum-report.xml -- $PACKAGE_NAMES
+      - run: 
+          name: Run tests with gotestsum 
+          command: |
+            PACKAGE_NAMES=$(go list ./...)
+            gotestsum --format=short-verbose --junitfile $TEST_RESULTS/go-getter/gotestsum-report.xml -- $PACKAGE_NAMES
+      - store_test_results:
+          path: *TEST_RESULTS_PATH
+      - store_artifacts:
+          path: *TEST_RESULTS_PATH
+  windows-tests:
+    executor: win/default
+    working_directory: c:\gopath\src\github.com\hashicorp\go-getter
+    parameters:
+      go-version:
+        type: string
+    environment:
+      TEST_RESULTS: *TEST_RESULTS_PATH
+      WIN_GOPATH: c:\gopath
+    steps: 
+      - checkout
+      - run: 
+          name: Install dependencies
+          shell: bash.exe
+          command: |
+            mkdir -p $TEST_RESULTS/go-getter
+            # Module requires golang v.1.13+, but the default on Windows is 1.12
+            choco install golang --version << parameters.go-version >>
+            curl -fOL https://github.com/gotestyourself/gotestsum/releases/download/v0.4.1/gotestsum_0.4.1_windows_amd64.tar.gz
+            tar -xvzf gotestsum_0.4.1_windows_amd64.tar.gz
+      - run:
+          name: Run tests with gotestsum 
+          shell: bash.exe
+          command: |
+            git config --global core.autocrlf false
+            PACKAGE_NAMES=$(go list ./...)
+            ./gotestsum.exe --format=short-verbose --junitfile $TEST_RESULTS/go-getter/gotestsum-report.xml -- $PACKAGE_NAMES
       - store_test_results:
           path: *TEST_RESULTS_PATH
       - store_artifacts:
           path: *TEST_RESULTS_PATH
 
 workflows:
-  version: 2
-  test-and-build:
+  go-getter:
     jobs:
-      - go-fmt-and-test
+      - linux-tests:
+          context: go-getter
+          matrix:
+            parameters:
+              # Module requires golang v.1.13+ 
+              go-version: ["1.14.1"]
+          name: linux-test-go-<< matrix.go-version >>
+      - windows-tests:
+          context: go-getter
+          matrix:
+            parameters:
+              # Module requires golang v.1.13+ 
+              go-version: ["1.14.1"]
+          name: win-test-go-<< matrix.go-version >>
