--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,34 +1,42 @@
 version: 2.1
 
 orbs:
-  go: circleci/go@1.1.1
   win: circleci/windows@2.2.0
 
 references:
   environments:
-    tmp: &TEST_RESULTS_PATH /tmp/test-results
-
-environment: &ENVIRONMENT
-  TEST_RESULTS: "/tmp/test-results"
+    test-results: &TEST_RESULTS_PATH /tmp/test-results
   
 jobs:
   linux-tests:
-    executor:
-      name: go/default
-      tag: << parameters.go-version >>
+    docker:
+      - image: circleci/golang:<< parameters.go-version >>
     parameters:
       go-version:
         type: string
-    environment:
-      TEST_RESULTS: *TEST_RESULTS_PATH
+    environment: 
+      TEST_RESULTS: "/tmp/test-results"
     steps:
+      - run: go version
       - checkout
-      - run: mkdir -p $TEST_RESULTS/go-getter
-      - go/load-cache
-      - go/mod-download
-      - go/save-cache
-      - run: 
-          name: Run go format
+      - run: mkdir -p "$TEST_RESULTS"
+
+      # Restore go module cache if there is one
+      - restore_cache:
+          keys:
+            - linux-gomodcache-v1-{{ checksum "go.mod" }}
+
+      - run: go mod download
+
+      # Save go module cache if the go.mod file has changed
+      - save_cache:
+          key: linux-gomodcache-v1-{{ checksum "go.mod" }}
+          paths:
+            - "/go/pkg/mod"
+
+      # check go fmt output because it does not report non-zero when there are fmt changes
+      - run:
+          name: check go fmt
           command: |
             files=$(go fmt ./...)
             if [ -n "$files" ]; then
@@ -36,15 +44,16 @@ jobs:
               echo "$files"
               exit 1
             fi
-      - run: 
-          name: Run tests with gotestsum 
-          command: |
-            PACKAGE_NAMES=$(go list ./...)
-            gotestsum --format=short-verbose --junitfile $TEST_RESULTS/go-getter/gotestsum-report.xml -- $PACKAGE_NAMES
+
+      # run go tests with gotestsum
+      - run: |
+          PACKAGE_NAMES=$(go list ./...)
+          gotestsum --format=short-verbose --junitfile $TEST_RESULTS/gotestsum-report.xml -- $PACKAGE_NAMES
       - store_test_results:
           path: *TEST_RESULTS_PATH
       - store_artifacts:
           path: *TEST_RESULTS_PATH
+
   windows-tests:
     executor: win/default
     working_directory: c:\gopath\src\github.com\hashicorp\go-getter
@@ -53,10 +62,24 @@ jobs:
         type: string
     environment:
       WIN_GOPATH: c:\gopath
-      TEST_RESULTS: *TEST_RESULTS_PATH
+      WIN_GOMOD_PATH: c:\Windows\system32\config\systemprofile\go\pkg\mod
+      WIN_TEST_RESULTS_PATH: c:\Users\circleci\AppData\Local\Temp\test-results
+      TEST_RESULTS: "/tmp/test-results"
     steps: 
       - run: git config --global core.autocrlf false
       - checkout
+
+      - restore_cache:
+          keys:
+            - win-gomodcache-v1-{{ checksum "go.mod" }}
+
+      - run: go mod download
+
+      - save_cache:
+          key: win-gomodcache-v1-{{ checksum "go.mod" }}
+          paths:
+            - $WIN_GOMOD_PATH
+
       - run: 
           name: Install dependencies
           shell: bash.exe
@@ -66,6 +89,7 @@ jobs:
             choco install golang --version << parameters.go-version >>
             curl -fOL https://github.com/gotestyourself/gotestsum/releases/download/v0.4.1/gotestsum_0.4.1_windows_amd64.tar.gz
             tar -xvzf gotestsum_0.4.1_windows_amd64.tar.gz
+
       - run:
           name: Run tests with gotestsum 
           shell: bash.exe
@@ -73,9 +97,9 @@ jobs:
             PACKAGE_NAMES=$(go list ./...)
             ./gotestsum.exe --format=short-verbose --junitfile $TEST_RESULTS/go-getter/gotestsum-report.xml -- $PACKAGE_NAMES
       - store_test_results:
-          path: c:\Users\circleci\AppData\Local\Temp\test-results
+          path: $WIN_TEST_RESULTS_PATH
       - store_artifacts:
-          path: c:\Users\circleci\AppData\Local\Temp\test-results
+          path: $WIN_TEST_RESULTS_PATH
 
 workflows:
   go-getter:
